--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "chatgpt-clone",
   "private": true,
-  "homepage": "https://guillaumesere.github.io/chatgpt-clone/chatgpt",
+  "homepage": "https://guillaumesere.github.io/chatgpt-clone",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "build": "vite build",
     "preview": "vite preview"
   },
